@@ -37,7 +37,7 @@ XINDYOPTS += -M LatinRules.xdy
 # format: pdf or dvi (used only by archive targets)
 FMT = pdf
 
-{% if latex_engine == 'platex' -%}
+{% if latex_engine in ('platex', 'uplatex') -%}
 # latexmkrc is read then overridden by latexmkjarc
 LATEX = latexmk -r latexmkjarc -dvi
 PDFLATEX = latexmk -r latexmkjarc -pdfdvi -dvi- -ps-
@@ -49,7 +49,7 @@ PDFLATEX = latexmk -pdf -dvi- -ps-
 %.png %.gif %.jpg %.jpeg: FORCE_MAKE
 	extractbb '$@'
 
-{% if latex_engine == 'platex' -%}
+{% if latex_engine in ('platex', 'uplatex') -%}
 %.dvi: %.tex $(ALLIMGS) FORCE_MAKE
 	for f in *.pdf; do extractbb "$$f"; done
 	$(LATEX) $(LATEXMKOPTS) '$<'
@@ -62,7 +62,7 @@ PDFLATEX = latexmk -pdf -dvi- -ps-
 %.ps: %.dvi
 	dvips '$<'
 
-{% if latex_engine == 'platex' -%}
+{% if latex_engine in ('platex', 'uplatex') -%}
 %.pdf: %.tex $(ALLIMGS) FORCE_MAKE
 	for f in *.pdf; do extractbb "$$f"; done
 {%- else -%}
